# WikiRace

./: .gitignore  CMakeLists.txt  README.md  compile.sh  import.sh  insert.sh  parse.py  parse.sh
include/: dbUtil.h  graph.h
sql/: cleanup.sql  links.sql  links_grouped.sql  linktarget.sql  pages.sql  redirects.sql  temp_links.sql  temp_redirects.sql
src/: dbUtil.cpp  graph.cpp  main.cpp
